# project_computer_graphic

./: README.md  image.py
Code/: CMakeLists.txt  Project_Computer_Graphic_report.tex  exctract.py  function.py  mixer.py  objexportBlender.py  skybox generator.py  texture_extender.py
Code/code/: box.frag  importalacon.cpp  main.cpp
Code/code/Animation/Bot/: Bot.cpp  Bot.h  bot.frag  bot.vert
Code/code/Camera/: Camera.cpp  Camera.h
Code/code/CloudsGenerator/: Clouds.frag  Clouds.vert  CloudsGenerator.cpp  CloudsGenerator.h
Code/code/Lights/: Lights.cpp  Lights.h  Material.cpp  Material.h
Code/code/Object_Loading/: NetworkLoader.cpp  NetworkLoader.h  ObjectLoading.frag  ObjectLoading.vert  objloader.cpp  objloader.h
Code/code/Objects/: crystals.mtl  street_lamps.objoriented  trees.objoriented
Code/code/Quad/: Quad.cpp  Quad.h  quad.frag  quad.vert
Code/code/SkyBox/: SkyBox.cpp  SkyBox.frag  SkyBox.h  SkyBox.vert
Code/code/StreetLamps/: StreetLamps.cpp  StreetLamps.h  StreetLamps.vert
Code/code/Textures/: TextureLoader.cpp  TextureLoader.h
bionic_architecture/: license.txt  scene.gltf
object/: project.gltf
